--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "adb": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.21.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
-    "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.10.2",
+    "react-native-image-picker": "^7.0.2",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0"
   },
