--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.10",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.8",
     "react": "18.2.0",
